--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
+    "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +15,7 @@
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
