--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "formik": "^2.2.9",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
@@ -21,9 +22,12 @@
     "react-modal": "^3.14.4",
     "react-otp-input": "^2.4.0",
     "react-phone-number-input": "^3.1.45",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
