--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "firebase": "^9.6.6",
     "formik": "^2.2.9",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.15.0",
     "react-phone-number-input": "^3.1.45",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
