--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-drag-drop-files": "^2.3.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-modal": "^3.14.4",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.0",
@@ -27,6 +28,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
+    "react-select-search": "^3.0.9",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
