--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.2",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-modal": "^3.14.4",
@@ -31,6 +32,7 @@
     "react-select": "^5.2.2",
     "react-select-search": "^3.0.9",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
